# spectrum-tui

./: Cargo.toml  README.md
data/: normalized_data.npy  two_spectra
src/: loader.rs  main.rs
src/app/: mod.rs  ui.rs
src/loader/: north_arm.rs  ovro.rs
