[package]
name = "spectrum-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
etcd-client = "0.11.1"
futures = "0.3.28"
log = "0.4.17"
ndarray = "0.15"
ndarray-npy = "0.8.1"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
ratatui = "0.20.0"
tui-logger = { version = "0.9.1", default-features = false, features = ["ratatui-support"] }
itertools = "0.11.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
